[package]
name = "rabe"
version = "0.4.1"
description = "ABE Schemes implemented in rust."
authors = [
    "Schanzenbach, Martin <martin.schanzenbach@aisec.fraunhofer.de>",
    "Bramm, Georg <georg.bramm@aisec.fraunhofer.de>",
    "Schuette, Julian <julian.schuette@aisec.fraunhofer.de>"
]
keywords = ["pairing","crypto","cryptography", "abe"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Fraunhofer-AISEC/rabe"
repository = "https://github.com/Fraunhofer-AISEC/rabe"
documentation = "https://docs.rs/rabe"

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen"]
serde = ["dep:serde"]

[lib]
name="rabe"
crate-type=["rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = "1.0"
pest = "2.1"
pest_derive = "2.1"
rand = "0.8"
aes-gcm = "0.10"
sha3 = "0.10"
rabe-bn = "0.4.23"
permutation = "0.2.5"


[workspace]

members = [
    "rabe-console"
]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}
rand = "0.8.5"

[[bench]]
name = "rabe"
harness = false